# sigmabott

./: .gitignore  main.py  pyproject.toml  readme.md  run.ps1
.github/workflows/: deploy.yml
src/: Home.py  __init__.py  app.py  backtest_engine.py  backtest_rsi_ema.py  event_manager.py  indicators.py  log_return.py  logger.py  main.py  strategies.py
src/pages/: 1_📊_Dashboard.py  2__Backtest.py  3_📈_Sammenligning.py  ⚙️ Dashboardinnstillinger.md
src/signals/: strategies.py
src/utils/: parquet_cache.py  yahoo_finance.py
