[project]
name = "sigmabott"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "black>=25.12.0",
    "inquirer>=3.4.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "ta>=0.11.0",
    "yfinance>=0.2.66",
]